footer alignment issue fixed

--- a/src/app/controls/footer/footer.component.scss
+++ b/src/app/controls/footer/footer.component.scss
@@ -14,9 +14,7 @@ ion-footer {
     }
   }
 
-  ul li {
-    cursor: pointer;
-  }
+ 
 
   ion-text {
     color: $color-Gray64;
@@ -39,10 +37,13 @@ ion-footer {
     margin: 0;
     color: $color-Gray64;
     font-size: $font-size-md;
-
+    display: inline-block;
+    vertical-align: top;
+    margin-right: 50px;
     li {
       padding: 4px 0;
       margin-left: 26px;
+      cursor: pointer;
       a {
         color: $color-Gray64;
         font-size: $font-size-md;
